--- a/packages/client/src/routes/Root.css
+++ b/packages/client/src/routes/Root.css
@@ -1,10 +1,10 @@
-.AppRoot {
+.Root {
 	display: flex;
 	width: 100vw;
 	height: 100vh;
 }
 
-.AppRoot > main {
+.Root > main {
 	display: flex;
 	width: 100%;
 	height: 100%;
